<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Moto Mileage Tracker</string>
    <string name="distancePrompt">Distance</string>
    <string name="trips">Trips</string>
    <string name="saveDescription">Touch this button to name your trip and save it for reuse</string>
    <string name="datePickerDescription">Touch this button to select a date for the trip</string>
    <string name="updateDeleteCopyTitle">Update, Delete, or Copy</string>
    <string-array name="dialog_items">
        <item>Update</item>
        <item>Delete</item>
        <item>Copy</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="confirmMessage">Are you sure you want to delete this trip?</string>
    <string name="delete">Delete</string>
    <string name="missingMessage">Enter date, description, and distance for the trip</string>
    <string name="invalidInputMessage">Input was not in a valid format</string>
    <string name="invalidTripReference">Could not retrieve the selected Trip</string>
    <string name="datePrompt">Date</string>
    <string name="saveTripButtonText">Save</string>
    <string name="updateTripButtonText">Update</string>
    <string name="descPrompt">Description</string>
    <string name="clearButtonText">Clear</string>
    <string name="tripSavedText">Trip Saved</string>
    <string name="tripDeletedText">Trip Deleted</string>
    <string name="tripUpdatedText">Trip Updated</string>
    <string name="dateTextView">Date</string>
    <string name="descTextView">Description</string>
    <string name="distanceTextView">Distance</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices_description">number of choices description</string>
    <string name="number_of_choices">number of choices</string>
    <string name="world_regions_description">world regions description</string>
    <string name="world_regions">world regions</string>
    <string name="settings_activity">Moto Mileage Settings</string>
    <string name="tripDisplaySpinnerPrompt">Trips to display</string>
    <string name="dateFormatSummary">Date Format</string>
    <string name="dateFormatTitle">Date Format</string>
    <string name="totalTextView">Total Miles:</string>
    <string name="totalTextValueView">Total Value</string>
    <string name="storageChoiceTitle">Storage System</string>
    <string name="storageChoiceSummary">Storage System</string>
    <string name="prefStorageChoiceKey">pref_storageChoice</string>
    <string name="storageChangedText">Switched storage!</string>
    <string name="reminderChoiceTitle">Reminder</string>
    <string name="reminderChoiceSummary">Reminder</string>
    <string name="prefReminderChoiceKey">pref_reminderChoice</string>
    <string name="reminderChangedText">Switched reminder type!</string>
    <string name="reminderScheduleChoiceTitle">Reminder Schedule</string>
    <string name="reminderScheduleChoiceSummary">Reminder Schedule</string>
    <string name="prefReminderScheduleChoiceKey">pref_reminderScheduleChoice</string>
    <string name="reminderScheduleChangedText">Switched reminder schedule!</string>
    <string name="facebook_app_id">788681817854677</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>

    <!-- In order for this demo to work you need to provide your own Firebase, API keys and App IDs -->
    <string name="firebase_url">https://motomileage-test.firebaseio.com</string>
    <!--<string name="firebase_url">https://intense-fire-8866.firebaseio.com</string>-->
    <string name="action_logout">Logout</string>
    <string name="initialTotalTextValue">0</string>
    <!--<string name="backend_url">https://aerial-grid-725.appspot.com</string>-->
    <string name="backend_url">http://192.168.1.106:8080</string>
    <!--<string name="web_app_client_id">audience:server:client_id:404913702000-ungmkf51e6ngqrfphd868h8brvq4ndfi.apps.googleusercontent.com</string>-->
    <string name="web_app_client_id">audience:server:client_id:404913702000-ungmkf51e6ngqrfphd868h8brvq4ndfi.apps.googleusercontent.com</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

</resources>
